fix: improve wrapping of code elements
Chrome seems pretty flaky with `box-decoration-break`. ie. in order to
see the difference between "clone" and "slice" I need to toggle the
border on and off again. Whatever; I think the wrapped spans look better
without borders or rounded corners anyway, so removing those. Also
experimented with bold but it is too heavyweight for my taste.

--- a/src/client/skeleton.css
+++ b/src/client/skeleton.css
@@ -201,10 +201,11 @@ code {
   padding: .2rem .5rem;
   margin: 0 .2rem;
   font-size: 90%;
-  white-space: nowrap;
+  overflow-wrap: anywhere;
+  font-weight: bold;
   background: #F1F1F1;
-  border: 1px solid #E1E1E1;
-  border-radius: 4px; }
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone; }
 pre > code {
   display: block;
   overflow: auto;
